--- a/src/Pages/How it works Mobile/WorksMobile.css
+++ b/src/Pages/How it works Mobile/WorksMobile.css
@@ -1,5 +1,5 @@
 .works-background{
-    background-image: url('./images/background.png');
+    background-image: url('../../assets/how-it-works-mobile/background.png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
@@ -11,7 +11,7 @@
 }
 
 .hwm-c1{
-    background-image: url('./images/Path\ 8.png');
+    background-image: url('../../assets/how-it-works-mobile/Path\ 8.png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
@@ -33,7 +33,7 @@
 }
 
 .hwm-c2{
-    background-image: url('./images/Group\ 8.png');
+    background-image: url('../../assets/how-it-works-mobile/Group\ 8.png');
     background-repeat: no-repeat;
     background-size:100% 100%;
 }
@@ -53,7 +53,7 @@
 }
 
 .hwm-c3{
-    background-image: url('./images/Path\ 9.png');
+    background-image: url('../../assets/how-it-works-mobile/Path\ 9.png');
     background-repeat: no-repeat;
     background-size:100% 100%;
 }
@@ -89,7 +89,7 @@
 }
 
 .whatnext-card{
-    background-image: url('./images/Capture.PNG');
+    background-image: url('../../assets/how-it-works-mobile/Capture.PNG');
     background-repeat: no-repeat;
     background-size:100% 100%;
 }
