--- a/src/components/MobileHeader.css
+++ b/src/components/MobileHeader.css
@@ -1,16 +1,16 @@
 .btn-search-hw{
-    background-color: white;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
+    background-color: white !important;
+    border-top-right-radius: 15px !important;
+    border-bottom-right-radius: 15px !important;
 }
 
 .searchbar-hw{
-    border:0;
-    outline:none;
-    border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
+    border:0 !important;
+    outline:none !important;
+    border-top-left-radius: 15px !important;
+    border-bottom-left-radius: 15px !important;
 }
 
 .searchbar-hw:focus{
-    outline:none;
+    outline:none !important;
 }
